write to kdtree

--- a/report/Makefile
+++ b/report/Makefile
@@ -25,17 +25,10 @@ final : *.tex *.bib output
 	cd output && rm -f *.tex *.bib && ln -s ../*.tex ../*.bib .
 	cd output && $(TEX) $(TARGET).tex && $(BIBTEX) $(TARGET).aux && \
 		$(TEX) $(TARGET).tex && $(TEX) $(TARGET).tex
-	ps2pdf14 output/$(TARGET).pdf ./$(TARGET).pdf
 
 count:
 	@word_count *.tex
 
-dist: output/$(TARGET).pdf
-	rm -rf paper
-	mkdir paper
-	cp output/$(TARGET).pdf paper/
-	cp -r screenshots paper/
-	7z a -tzip paper.zip paper
-	rm -rf paper
+run: view
 
-.PHONY: all view clean rebuild dist
+.PHONY: all view clean rebuild run
