change main to  ray-tracing

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 # $File: Makefile
-# $Date: Wed Jun 26 01:38:04 2013 +0800
+# $Date: Sun Sep 22 18:43:24 2013 +0800
 
 OBJ_DIR = build
-TARGET = main
+TARGET = ray-tracing
 
 INCLUDE_DIR = -Iinclude
 DEFINES = -DDEBUG
